# coffeeshop

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: audio_layers.rs  coffee_app.rs  coffee_audio.rs  coffee_chat.rs  coffee_network.rs  coffee_types.rs  coffee_ui.rs  file_source.rs  filtered_source.rs  main.rs  tui_user_interface.rs  user_interface.rs
src/audio_layers/: passthrough.rs  swap_left_right.rs
src/coffee_audio/: sources.rs  types.rs
src/coffee_audio/layers/: passthrough.rs  swap_left_right.rs
src/coffee_audio/sources/: file_source.rs  filtered_source.rs
src/coffee_network/: peer.rs  text_chat.rs  ui.rs
src/coffee_network/ui/: chat_view.rs  connect_dialog.rs
src/coffee_ui/: impl_cursive.rs  impl_iced.rs
src/coffee_ui/impl_cursive/: chat_view.rs  connect_dialog.rs
src/coffee_ui/impl_iced/: chat_view.rs  network_view.rs
src/coffee_ui/impl_iced/chat_view/: chat_recipe.rs
