[package]
name = "coffeeshop"
version = "0.1.0"
authors = ["AberrantWolf <orcein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "*"
crossterm = "0.14"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
