[package]
name = "coffeeshop"
version = "0.1.0"
authors = ["AberrantWolf <orcein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "*"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }

[dependencies.cursive]
version = "0.14"
default-features = false
features = ["pancurses-backend"]
