[package]
name = "coffeeshop"
version = "0.1.0"
authors = ["AberrantWolf <orcein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ui-iced"]
ui-cursive = ["cursive"]
ui-iced = ["iced"]

[dependencies]
bincode = "1.2"
cpal = { git = "https://github.com/RustAudio/cpal" }
itertools = "0.9"
ringbuf = "0.2"
serde = "^1.0.63"
# sfml = "*"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"]}

iced = { version = "0.1", optional = true }

[dependencies.cursive]
version = "0.14"
default-features = false
features = ["pancurses-backend"]
optional = true